objects/DealScoreHistory__c.object
<CustomObject>
    <fields>
        <fullName>Consolidated_Contractual_Discount__c</fullName>
        <description>What it Does? Stores consolidated contractual discount
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Consolidated Contractual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Discount__c</fullName>
        <description>What it Does? Stores customer registration discount
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Customer Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cutoff__c</fullName>
        <description>What it Does? Stores CutOff value
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Cutoffs</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Scored__c</fullName>
        <description>added for reporting</description>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Scored</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DealScore__c</fullName>
        <label>DealScore</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Discount__c</fullName>
        <description>What it Does? Stores deal registration discount
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Deal Registration Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Score_After_Contractual_Discount__c</fullName>
        <description>What it Does? Stores deal score after contractual discount adjustment
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Deal Score After Contractual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Score_After_Overall_Adjustment__c</fullName>
        <description>What it Does? Stores deal score after overall adjustment
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Deal Score After Overall Adjustment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <description>What it Does? Stores deal size
Downstream Impact? DQ Approval
Which department is owner? IT</description>
        <label>Deal Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect_Deal__c</fullName>
        <formula>IF( Quote__r.End_User_ID__c =  Quote__r.Sold_To_Name__c ,&apos;Direct&apos;,&apos;Indirect&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct/Indirect Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect__c</fullName>
        <description>What it Does? Stores sale type
Downstream Impact? DQ Approval
Which department is owner? IT</description>
        <label>Direct/Indirect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Discount_Impact__c</fullName>
        <description>What it Does? Stores hardware discount impact
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Hardware Discount Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_Discount__c</fullName>
        <description>What it Does? stores average discounts for hardware quote products
Downstream Impact? N/A
Which department is owner? Sales Ops</description>
        <label>Hardware Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Max_License_Discount_Impact__c</fullName>
        <description>What it Does? Stores max license discount impact
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Max License Discount Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_License_Discount__c</fullName>
        <description>What it Does? Stores max license discount
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Max License Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PS_Discount_Impact__c</fullName>
        <description>What it Does? Stores PS discount impact
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>PS Discount Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Discount__c</fullName>
        <description>What it Does? Stores PS Discount
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>PS Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Discount__c</fullName>
        <description>What it Does? Stores Partner Discount
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <description>What it Does? Stores QuoteId as a unique identifier 
Downstream Impact? DDS Cloud Calculation 
Which department is owner? IT</description>
        <externalId>true</externalId>
        <label>Quote Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Offering_Type__c</fullName>
        <description>added for reporting</description>
        <formula>BLANKVALUE(Quote__r.Offering_Type__c, &apos;PureEngage&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>DealScoreHistories</relationshipLabel>
        <relationshipName>DealScoreHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raw_Score_Discount__c</fullName>
        <description>What it Does? Stores raw score discount 
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Raw Score Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Raw_Score__c</fullName>
        <description>What it Does? Stores raw score
Downstream Impact? DDS Calculation 
Which department is owner? IT</description>
        <label>Raw Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party_Discount_Impact__c</fullName>
        <description>What it Does? Stores third party discount impact
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Third Party Discount Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party_Discount__c</fullName>
        <description>What it Does? Stores third party discount
Downstream Impact? DQ Approval
Which department is owner? IT</description>
        <label>Third Party Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Impact__c</fullName>
        <description>What it Does? Stores total impact
Downstream Impact? DDS Calculation
Which department is owner? IT</description>
        <label>Total Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>DealScoreHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote_Offering_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DealScoreHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealScoreHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>